@@ -24,6 +24,13 @@
 2009-04-27  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> magick/command.c (MogrifyImages): Deal slightly better with the
+        case when MogrifyImage() expands one image into several.  Still
+        don't know of a sane way to deal with -crop WIDTHxHEIGHT.
+
+  <LI> magick/transform.c (TransformImage): Image which is updated may
+        be a list so account for that.
+
   <LI> configure.ac: Add a test for the 'restrict' keyword so that
         eventually we can use it.
 
